# numerical_linear_algebra

./: README.md
projet/: CMakeLists.txt  Makefile  README.md  visualisation.sh
projet/data/: visualisation_csr.json  visualisation_dense_1.json  visualisation_dense_2.json
projet/include/: block.hpp  block_matrix.hpp  chargeur_matrice.hpp  dense_matrix.hpp  gradient_conjugue.hpp  json.hpp  matrice_coo.hpp  matrice_csr.hpp  matrice_laplacien.hpp  matrice_laplacien_csr.hpp  matrice_spd_simple.hpp  triplet.hpp  vecteur.hpp
projet/src/: block.cpp  block_matrix.cpp  chargeur_matrice.cpp  dense_matrix.cpp  gradient_conjugue.cpp  json.cpp  matrice_coo.cpp  matrice_csr.cpp  matrice_laplacien.cpp  matrice_laplacien_csr.cpp  matrice_spd_simple.cpp  triplet.cpp  vecteur.cpp
projet/test/: test_block.cpp  test_block_csr.cpp  test_block_matrix.cpp  test_chargeur_matrice.cpp  test_dense_matrix.cpp  test_main.cpp  test_matrice_coo.cpp  test_matrice_csr.cpp  test_matrice_laplacien.cpp  test_triplet.cpp  test_vecteur.cpp
projet/visualisation/: visualisation.py
tp1/: CMakeLists.txt  Makefile  README.md
tp1/include/: gauss_seidel.hpp  gradient_conjugue.hpp  gradient_conjugue_preconditionne.hpp  jacobi.hpp  matrice.hpp  matrice_coo.hpp  matrice_csr.hpp  matrice_laplacienne.hpp  matrice_spd_simple.hpp  methode_iterative.hpp  relaxation.hpp  solveurs_directs.hpp  triplet.hpp  vecteur.hpp
tp1/src/: gauss_seidel.cpp  gradient_conjugue.cpp  gradient_conjugue_preconditionne.cpp  jacobi.cpp  matrice.cpp  matrice_coo.cpp  matrice_csr.cpp  matrice_laplacienne.cpp  matrice_spd_simple.cpp  (+5 more)
(+26 files in other folders)
